# trimr

./: .gitignore  .trimrrc.yaml.example  AGENTS.md  README.md  pyproject.toml
tests/: test_audit.py  test_audit_multiframework.py  test_backup_manager.py  test_config.py  test_crewai_adapter.py  test_edge_cases.py  test_fixer.py  test_langchain_adapter.py  test_migrator.py  test_openai_adapter.py  test_parser.py  test_quick_wins.py  test_token_estimation.py  test_tokenizer.py  test_truncation.py  test_validators.py
tests/fixtures/bloated_project/: CLAUDE.md
tests/fixtures/clean_project/: CLAUDE.md
tests/fixtures/clean_project/skills/: pointer.md
tests/fixtures/crewai_project/: CLAUDE.md  agents.py  crew.py  pyproject.toml  tasks.py
tests/fixtures/crewai_project/config/: agents.yaml
tests/fixtures/crewai_project/skills/: orphan_tool_notes.md
tests/fixtures/langchain_project/: CLAUDE.md  agents.py  langchain.yaml  pyproject.toml
tests/fixtures/langchain_project/.langchain/: README.md
tests/fixtures/langchain_project/skills/: orphan_notes.md  pointer.md
tests/fixtures/openai_project/: .env  assistant.json
tests/fixtures/openai_project/functions/: create_followup.json
tests/fixtures/openai_project/skills/: orphan_notes.md  pointer.md
trimr/: audit.py  backup_manager.py  cli.py  config.py  fixer.py  migrator.py  models.py  parser.py  reporter.py  token_estimation.py  tokenizer.py  validators.py
trimr/adapters/: __init__.py  base.py  claude_adapter.py  crewai_adapter.py  langchain_adapter.py  openai_adapter.py
(+22 files in other folders)
