[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trimr"
version = "0.1.0"
description = "Token audit and migration tool for AI agent projects"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Trimr Team"}]
dependencies = [
    "typer>=0.9.0",
    "tiktoken>=0.5.0",
    "PyYAML>=6.0",
    "rich>=13.0.0",
    "pathspec>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
trimr = "trimr.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["trimr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
